syntax = "proto3";
package admin_permission;
option go_package = "./admin_role;admin_role";

//角色列表
message RoleListReq{
  int32 id=1;//角色ID
  string name=2;//角色名称
  int32 enabled=3;//启用状态，0：全部，1：启用，2：禁用
}
message RoleListResp{}

//有效角色列表
message RoleAllReq{
  int32 id=1;//角色ID
  string name=2;//角色名称
  int32 enabled=3;//启用状态，0：全部，1：启用，2：禁用
}
message RoleAllResp{}

//创建角色
message RoleAddReq{
  string name=1;//角色名称
  string describe=2;//角色描述
  bool enabled=3;//启用状态
}
message RoleAddResp{}

//角色详情
message RoleDetailReq{
  int32 id=1;//角色ID
}
message RoleDetailResp{}

//编辑角色
message RoleEditReq{
  int32 id=1;//角色ID
  string name=2;//角色名称
  string describe=3;//角色描述
  bool enabled=4;//启用状态
}
message RoleEditResp{}

//启用禁用角色
message RoleUpdateIsEnabledReq{
  int32 id=1;//角色ID
  bool enabled=2;//启用状态
}
message RoleUpdateIsEnabledResp{}

//删除角色
message RoleDeleteReq{
  int32 id=1;//角色ID
  repeated int32 permissionIds=2;//权限ID集合
}
message RoleDeleteResp{}

//角色绑定权限
message RoleBindPermissionsReq{
  int32 id=1;//角色ID
}
message RoleBindPermissionsResp{}

//角色权限列表
message RolePermissionsReq{
  int32 id=1;//角色ID
}
message RolePermissionsResp{}