syntax="proto3";
package admin_proto;
option go_package="./admin_proto;admin_proto";